# mr_python

./: .env_template  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py
docs/: conf.py  confy.py  index.rst  mediumroast_py.api.rst  mediumroast_py.rst  modules.rst  requirements.txt  tests.rst
examples/: README.md  base_cli.py  companies.py  companies_example.json  company.py  env_setup.py  get_users.py  interaction.py  interactions.py  interactions_example.json  s3_ingest.py  studies.py  studies_example.json  study.py  users.py  users_example.json
examples/.mediumroast/: config.ini
examples/rewrite_rules/: company.ini  interaction.ini  study.ini
mediumroast_py/api/: authorize.py  github.py  github_server.py  mr_server.py
mediumroast_py/transformers/: interaction.py
mr_python/: helpers.py
mr_python/api/: helpers.py  high_level.py  mr_server.py  scaffold.py
mr_python/api/attic/: json_to_backend.py
mr_python/extractors/: file.py  folder.py  s3bucket.py
mr_python/loaders/: json.py
mr_python/transformers/: company.py  helpers.py  interaction.py  study.py
source/: conf.py  index.rst
tests/: disabled_test_device_flow_plus_functions.py  test_all_auth.py  test_device_flow_plus_functions.py  test_pem_plus_functions.py
tests/example_data/: Interactions.json  confluence_vs_sharepoint_metadata_update.json  team_q1_2024_shareholder_letter_metadata_update.json
