[tool.poetry]
name = "mediumroast_py"
version = "0.6.0"
description = "A package to perform ETL (Extract, Transform and Load) and  interact with the mediumroast.io application."
authors = ["Michael Hay <michael.hay@mediumroast.io>"]
license = "Apache-2.0"
repository = "https://github.com/mediumroast/mediumroast_py"
readme = "README.md"
keywords = ["Product Management", "Competitive Insights", "Customer Insights", "Partner Insights", "Empowered Teams"]
include = ["mediumroast_examples/*.*", "mediumroast_examples/*/*", "mediumroast_examples/.*/*"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
spacy = "^3.3.1"
geopy = "^2.2.0"
pyjwt = "^2.8.0"
cryptography = "^42.0.6"
pygithub = "^2.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
test = "run_tests:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mediumroast/mediumroast_py/issues"
